kyverno/evidence/istio-mtls/istio-mtls.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  annotations:
    kyverno.io/kubernetes-version: "1.24"
    kyverno.io/kyverno-version: 1.8.0
    policies.kyverno.io/category: Security
    policies.kyverno.io/description: Strict mTLS requires that mutual TLS be enabled
      across the entire service mesh, which can be set using a PeerAuthentication
      resource. This policy audits all PeerAuthentication resources to ensure they use strict mTLS.
    policies.kyverno.io/minversion: 1.6.0
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: PeerAuthentication
    policies.kyverno.io/title: Audit Istio Strict mTLS
  name: audit-strict-mtls
spec:
  background: true
  rules:
  - name: validate-mtls
    match:
      resources:
        kinds:
        - PeerAuthentication
    validate:
      message: PeerAuthentication resources must use STRICT mode
      pattern:
        spec:
          mtls:
            mode: STRICT
  validationFailureAction: Audit
